tests/cases/compiler-development/artifact/errors/diagnostic-type-assignment.diagnostic
diagnostic error code=T0001 family=type message="type mismatch: expected i64, got bool" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-type-assignment.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-type-assignment.ari" bytes=75
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-type-assignment.ari" line=3 column=11 end_line=3 end_column=15 byte_start=51 byte_end=55 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-type-assignment.ari:3:11\n   |\n 3 |   value = true;\n   |           ^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-type-assignment.ari" line=2 column=7 end_line=2 end_column=12 byte_start=25 byte_end=30 message="binding 'value' expects i64"
  Snippet label=1 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-type-assignment.ari:2:7\n   |\n 2 |   var value: i64 = 1;\n   |       ^^^^^"
  Note index=0 location=none message="assignment values are checked against the target type after expression coercions"
  Help index=0 location=none message="assign a value of type i64 or change the target type"
